--- a/SelfAspNet/SelfAspNet/SelfAspNet.csproj
+++ b/SelfAspNet/SelfAspNet/SelfAspNet.csproj
@@ -67,20 +67,60 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Chap02\CheckBox.aspx" />
+    <Content Include="Chap02\FileUpload2.aspx" />
+    <Content Include="Chap02\FileUpload.aspx" />
+    <Content Include="Chap02\FileUploadMulti.aspx" />
+    <Content Include="Chap02\RadioButton.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
-    <Content Include="Models\Hello.aspx" />
+    <Content Include="Chap01\Hello.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chap02\CheckBox.aspx.cs">
+      <DependentUpon>CheckBox.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Chap02\CheckBox.aspx.designer.cs">
+      <DependentUpon>CheckBox.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Chap02\FileUpload2.aspx.cs">
+      <DependentUpon>FileUpload2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Chap02\FileUpload2.aspx.designer.cs">
+      <DependentUpon>FileUpload2.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Chap02\FileUpload.aspx.cs">
+      <DependentUpon>FileUpload.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Chap02\FileUpload.aspx.designer.cs">
+      <DependentUpon>FileUpload.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Chap02\FileUploadMulti.aspx.cs">
+      <DependentUpon>FileUploadMulti.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Chap02\FileUploadMulti.aspx.designer.cs">
+      <DependentUpon>FileUploadMulti.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Chap02\RadioButton.aspx.cs">
+      <DependentUpon>RadioButton.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Chap02\RadioButton.aspx.designer.cs">
+      <DependentUpon>RadioButton.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Hello.aspx.cs">
+    <Compile Include="Chap01\Hello.aspx.cs">
       <DependentUpon>Hello.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Models\Hello.aspx.designer.cs">
+    <Compile Include="Chap01\Hello.aspx.designer.cs">
       <DependentUpon>Hello.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -95,7 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Chap1\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
