prj 2.5 表示系コントロールのサンプル
prj 2.5 Text.aspx
LabelコントロールとLiteralコントロールの違いについて↓
HTML出力時にspanタグで囲われるかどうかで違いが出る。
囲われるのがLabelコントロールのほうなので簡単にスタイルを適用したければLabel
Literalのほうは完全にプレーンな文字が出力される。

クロスサイトスクリプティング防止のためにLiteralコントロールには
Modeプロパティが用意されており、EncodeとするとHTMLの予約語を無害な文字に変換する。
ModeプロパティをTransformとすると無害な文字への変換は行わない。

--- a/SelfAspNet/SelfAspNet/SelfAspNet.csproj
+++ b/SelfAspNet/SelfAspNet/SelfAspNet.csproj
@@ -72,6 +72,7 @@
     <Content Include="Chap02\FileUpload.aspx" />
     <Content Include="Chap02\FileUploadMulti.aspx" />
     <Content Include="Chap02\RadioButton.aspx" />
+    <Content Include="Chap02\Text.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
     <Content Include="Chap01\Hello.aspx" />
@@ -111,6 +112,13 @@
     </Compile>
     <Compile Include="Chap02\RadioButton.aspx.designer.cs">
       <DependentUpon>RadioButton.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Chap02\Text.aspx.cs">
+      <DependentUpon>Text.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Chap02\Text.aspx.designer.cs">
+      <DependentUpon>Text.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
